--- a/app/src/main/res/layout/draw_route_options.xml
+++ b/app/src/main/res/layout/draw_route_options.xml
@@ -16,7 +16,7 @@
             android:id="@+id/textView_drawRoute_select_your_bus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/modernsans"
+            android:fontFamily="@font/modern_sans"
             android:text="@string/select_the_station_where_you_want_to_go"
             android:textColor="@color/white"
             android:textSize="16sp" />
@@ -28,8 +28,8 @@
             android:layout_below="@id/textView_drawRoute_select_your_bus"
             android:layout_centerHorizontal="true"
             android:layout_margin="12dp"
-            android:background="@color/darkergray"
-            android:fontFamily="@font/modernsans"
+            android:background="@color/darkerGray"
+            android:fontFamily="@font/modern_sans"
             android:hint="@string/enter_the_station_name_here"
             android:inputType="text"
             android:padding="8dp"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_below="@id/autoCompleteTextView_search_station"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/modernsans"
+            android:fontFamily="@font/modern_sans"
             android:text="@string/or_select_your_station_from_this_list"
             android:layout_centerHorizontal="true"
             android:textColor="@color/white"
@@ -64,8 +64,8 @@
             android:layout_height="32dp"
             android:layout_below="@+id/spinner_drawRoute_selectStation"
             android:layout_centerHorizontal="true"
-            android:background="@color/darkergray"
-            android:fontFamily="@font/modernsans"
+            android:background="@color/darkerGray"
+            android:fontFamily="@font/modern_sans"
             android:text="@string/apply"
             android:textColor="@color/white"
             android:textSize="12sp" />
