--- a/app/src/main/res/layout/fragment_listed_bus_details.xml
+++ b/app/src/main/res/layout/fragment_listed_bus_details.xml
@@ -15,7 +15,7 @@
         android:id="@+id/textView_result_buses_clicked_info_for_bus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/info_for_bus"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -26,8 +26,8 @@
         android:id="@+id/textView_result_buses_clicked_arrives_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
-        android:text="@string/arrives_in"
+        android:fontFamily="@font/modern_sans"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="28sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,7 +37,7 @@
         android:id="@+id/textView_result_buses_clicked_closest_station_arrive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/closest_station_to_you"
         android:textColor="@color/white"
         android:textSize="28sp"
