--- a/app/src/main/res/layout/result_buses_row_item.xml
+++ b/app/src/main/res/layout/result_buses_row_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/darkerdarkgray"
+    android:background="@color/darkerDarkGray"
     android:minWidth="400dp"
     android:padding="12dp">
 
@@ -12,7 +12,7 @@
         android:id="@+id/textView_result_bus_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="27"
         android:textColor="@color/white"
         android:textSize="64sp"
@@ -25,7 +25,7 @@
         android:id="@+id/textView_result_bus_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:paddingStart="16dp"
         android:text="Realtime bus not found!"
         android:textColor="@color/white"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="12dp"
         android:gravity="start"
         android:ellipsize="end"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:lines="3"
         android:maxLines="3"
         android:paddingStart="20dp"
