--- a/app/src/main/res/layout/status_and_bus_set.xml
+++ b/app/src/main/res/layout/status_and_bus_set.xml
@@ -11,7 +11,7 @@
         android:id="@+id/editText_sab_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/please_choose_your_current_status"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/please_choose_your_current_bus"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -63,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/white"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:popupBackground="@color/white"
         app:layout_constraintTop_toBottomOf="@id/editText_sab_selectBus"
         tools:targetApi="lollipop" />
@@ -72,8 +72,8 @@
         android:id="@+id/button_apply_status_and_bus"
         android:layout_width="52dp"
         android:layout_height="32dp"
-        android:background="@color/darkergray"
-        android:fontFamily="@font/modernsans"
+        android:background="@color/darkerGray"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/apply"
         android:textColor="@color/white"
         android:textSize="12sp"
