--- a/app/src/main/res/drawable/gradient_black_background.xml
+++ b/app/src/main/res/drawable/gradient_black_background.xml
@@ -4,7 +4,7 @@
     <shape>
         <gradient
             android:angle="90"
-            android:startColor="@color/darkerdarkgray"
+            android:startColor="@color/darkerDarkGray"
             android:endColor="@color/black"
             android:type="linear"/>
     </shape>
