--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/status_nav_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/current_status"
         android:textColor="@color/white"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/closest_station"
         android:textColor="@color/white"
         android:textSize="12sp" />
@@ -44,7 +44,7 @@
         android:id="@+id/user_id_nav_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/user_id"
         android:textColor="@color/white"
         android:textSize="12sp" />
@@ -53,7 +53,7 @@
         android:id="@+id/user_speed_nav_header"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fontFamily="@font/modernsans"
+        android:fontFamily="@font/modern_sans"
         android:text="@string/current_speed"
         android:textColor="@color/white"
         android:textSize="12sp" />
