--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
     <color name="black">#000000</color>
-    <color name="lighterdarkgray">#333333</color>
-    <color name="darkerdarkgray">#212121</color>
-    <color name="darkergray">#444444</color>
+    <color name="lighterDarkGray">#333333</color>
+    <color name="darkerDarkGray">#212121</color>
+    <color name="darkerGray">#444444</color>
 </resources>
