--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/lighterdarkgray</item>
-        <item name="colorPrimaryDark">@color/darkerdarkgray</item>
+        <item name="colorPrimary">@color/lighterDarkGray</item>
+        <item name="colorPrimaryDark">@color/darkerDarkGray</item>
         <item name="colorAccent">@color/gray</item>
     </style>
 
