--- a/app/src/main/res/layout/bus_route.xml
+++ b/app/src/main/res/layout/bus_route.xml
@@ -16,10 +16,10 @@
             android:id="@+id/textView_drawRoute_select_bus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/modern_sans"
             android:text="@string/select_the_bus_to_show_it_s_route"
             android:textColor="@color/white"
-            android:fontFamily="@font/modern_sans"
-            android:layout_centerHorizontal="true"
             android:textSize="16sp" />
 
         <Spinner
@@ -57,7 +57,6 @@
                 android:text="@string/lastStation"
                 android:textColor="@color/white"
                 android:textSize="12sp" />
-
         </RadioGroup>
 
         <Button
@@ -66,11 +65,11 @@
             android:layout_height="32dp"
             android:layout_below="@id/radioGroupRouting"
             android:layout_centerHorizontal="true"
-            android:background="@color/darkerGray"
-            android:text="@string/apply"
-            android:textSize="12sp"
+            android:background="@color/lighterDarkGray"
             android:fontFamily="@font/modern_sans"
-            android:textColor="@color/white" />
+            android:text="@string/apply"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
 
 
     </RelativeLayout>
