--- a/app/src/main/res/layout/status_and_bus_set.xml
+++ b/app/src/main/res/layout/status_and_bus_set.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:background="@drawable/popup_style_set"
     android:padding="16dp">
 
@@ -16,6 +17,7 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -54,6 +56,7 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_status_waiting_for_bus" />
 
     <Spinner
@@ -61,10 +64,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/modern_sans"
         android:popupBackground="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editText_sab_selectBus"
         tools:targetApi="lollipop" />
 
@@ -72,7 +76,8 @@
         android:id="@+id/button_apply_status_and_bus"
         android:layout_width="52dp"
         android:layout_height="32dp"
-        android:background="@color/darkerGray"
+        android:layout_marginTop="20dp"
+        android:background="@color/lighterDarkGray"
         android:fontFamily="@font/modern_sans"
         android:text="@string/apply"
         android:textColor="@color/white"
